--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: pandaman666/ubuntu:custom-xict-devel-ubuntu20.04-tensorrt8.5.3.1 # 使用的Docker镜像
+      - image: docker:26.1-cli
     environment:  # 设置全局环境变量
       CCACHE_DIR: /tmp/.ccache  # 缓存目录
 
