--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: docker pull pandaman666/ubuntu:vanilla-runtime-ubuntu20.04
+      - image: pandaman666/ubuntu:vanilla-runtime-ubuntu20.04
     environment:  # 设置全局环境变量
       CCACHE_DIR: /tmp/.ccache  # 缓存目录
 
