--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,13 @@ jobs:
       - restore_cache:  # 恢复缓存步骤
           keys:
             - docker-ccache
-      # - run:
-      #     name: Install docker
-      #     command: cd env-docker && ./deps/install_docker.sh
+      - run:
+          name: Install docker
+          command: |
+            apt-get update && apt-get install ca-certificates curl && install -m 0755 -d /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc && chmod a+r /etc/apt/keyrings/docker.asc
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu  $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+            apt-get update
+            apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
       - run:
           name: build docker  images
           command: |
