--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-      - image: pandaman666/ubuntu:custom-xict-devel-ubuntu20.04-tensorrt8.5.3.1
+      - image: cimg/base:current-20.04
     environment:  # 设置全局环境变量
       CCACHE_DIR: /tmp/.ccache  # 缓存目录
 
@@ -21,8 +21,10 @@ workflows:
 jobs:
   build:  # 构建作业
     executor: docker-executor
-    resource_class: large
+    resource_class: medium
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Setup SSH
           command: |
@@ -35,8 +37,6 @@ jobs:
       - restore_cache:  # 恢复缓存步骤
           keys:
             - docker-ccache
-      - setup_remote_docker:
-          docker_layer_caching: true
       - run:
           name: build docker  images
           command: |
