ci: change build task

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,9 @@ jobs:
           name: build docker  images
           command: |
             # echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            cd env-docker && ./build.sh --package-name custom --package-version xict  --os ubuntu --os-version 20.04 --arch amd64,arm64 --num-threads 4 --push --image-suffix tensorrt8.5.3.1 --extra-args "--build-arg BASE_PACKAGE=tensorrt-8.5.3.1"
+            cd env-docker
+            # ./build.sh --package-name custom --package-version xict  --os ubuntu --os-version 20.04 --arch amd64,arm64 --num-threads 4 --push --image-suffix tensorrt8.5.3.1 --extra-args "--build-arg BASE_PACKAGE=tensorrt-8.5.3.1"
+            ./build.sh --package-name tensorrt --package-version 8.5.3.1 --os ubuntu --os-version 18.04 --arch amd64,arm64 --push --extra-args "--build-arg BASE_PACKAGE_VERSION=11.8.0"
       - save_cache:  # 保存缓存步骤
           key: docker-ccache
           paths:
