--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ workflows:
 jobs:
   build:  # 构建作业
     executor: docker-executor
-    resource_class: medium
+    resource_class: large
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
