--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ executors:
   docker-executor:
     docker:
       - image: cimg/base:current-20.04
+        auth:
+          username: pandaman666  # can specify string literal values
+          password: $DOCKERHUB_PASSWORD
     environment:  # 设置全局环境变量
       CCACHE_DIR: /tmp/.ccache  # 缓存目录
 
