--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,16 @@ jobs:
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
+      - docker/check:
+          docker-username: pandaman666  # DOCKER_LOGIN is the default value, if it exists, it automatically would be used.
+          docker-password: $DOCKERHUB_PASSWORD  # DOCKER_PASSWORD is the default value
       - run:
           name: Setup SSH
           command: |
             mkdir -p ~/.ssh
             touch ~/.ssh/known_hosts
             ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts  # 配置SSH
+            echo $DOCKERHUB_PASSWORD
       - run:
           name: Checkout
           command: git clone -b main git@github.com:Y-pandaman/env-docker.git
@@ -43,7 +47,7 @@ jobs:
       - run:
           name: build docker  images
           command: |
-            # echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker login -u pandaman666 -p $DOCKERHUB_PASSWORD
             cd env-docker
             ./build.sh --package-name custom --package-version xict  --os ubuntu --os-version 20.04 --arch amd64 --num-threads 4 --push --image-suffix tensorrt8.5.3.1 --extra-args "--build-arg BASE_PACKAGE=tensorrt-8.5.3.1"
             # ./build.sh --package-name tensorrt --package-version 8.5.3.1 --os ubuntu --os-version 18.04 --arch amd64 --push --extra-args "--build-arg BASE_PACKAGE_VERSION=11.8.0"
