--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             # ./build.sh --package-name custom --package-version xict  --os ubuntu --os-version 20.04 --arch amd64 --num-threads 4 --push --image-suffix tensorrt8.5.3.1 --extra-args "--build-arg BASE_PACKAGE=tensorrt-8.5.3.1"
             # ./build.sh --package-name tensorrt --package-version 8.5.3.1 --os ubuntu --os-version 20.04 --arch amd64 --push --extra-args "--build-arg BASE_PACKAGE_VERSION=11.4.3-cudnn8"
             # ./build.sh --package-name cuda --package-version 11.4.3-cudnn8 --os ubuntu --os-version 20.04 --num-threads 4 --arch amd64 --push
-            ./build.sh --package-name ros --package-version galactic  --os ubuntu --os-version 20.04 --num-threads 8 --arch amd64 --push --image-suffix cuda11.4.3 --extra-args "--build-arg BASE_PACKAGE=cuda-11.4.3-cudnn8"
+            # ./build.sh --package-name ros --package-version galactic  --os ubuntu --os-version 20.04 --num-threads 8 --arch amd64 --push --image-suffix cuda11.4.3 --extra-args "--build-arg BASE_PACKAGE=cuda-11.4.3-cudnn8"
       - save_cache:  # 保存缓存步骤
           key: docker-ccache
           paths:
